syntax = "proto3";

option go_package = "notificationGrpc/";

import "google/protobuf/timestamp.proto";


service NotificationService {
  //commands
  rpc SendNotificationToUser(CreateNotificationRequest) returns (CreateNotificationResponse);
  rpc SendCampaign(CreateCampaignRequest) returns (CreateCampaignResponse);
  //query
  rpc GetNotificationById(GetNotificationByIdRequest) returns (GetNotificationResponse);
  rpc GetNotificationUserId(GetNotificationByUserRequest)returns (GetNotificationByUserResponse);

}

message CreateNotificationRequest {
  string title = 1;
  string body = 2;
  string image = 3;
  string userId = 4;
}

message CreateNotificationResponse {
  string notificationId = 1;
}

message CreateCampaignRequest {
  string notificationId = 1;
  string title = 2;
  string body = 3;
  string image = 4;
  google.protobuf.Timestamp scheduleDisplay = 5;
}

message CreateCampaignResponse {
  string notificationId = 1;
}

message GetNotificationByIdRequest {
  string notificationId = 1;
}

message GetNotificationResponse {
  NotificationResponse notification = 1;
}

message GetNotificationByUserRequest{
  string userId = 1;
}

message GetNotificationByUserResponse{
  repeated NotificationResponse notifications = 1;
}

message NotificationResponse {
  string Id = 1;
  string title = 2;
  string body = 3;
  string image = 4;
  string ownerId = 5;
  int32 type = 6;
  google.protobuf.Timestamp createdAt = 7;
  google.protobuf.Timestamp updatedAt = 8;
}

